SPRDT-939 reset logic